--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,10 @@
-﻿# CMakeList.txt : CMake project for cmake-project-with-macros, include source and define
-# project specific logic here.
-#
-cmake_minimum_required (VERSION 3.8)
-
-# Enable Hot Reload for MSVC compilers if supported.
-if (POLICY CMP0141)
-  cmake_policy(SET CMP0141 NEW)
-  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
-endif()
+﻿cmake_minimum_required (VERSION 3.8)
 
 project ("cmake-project-with-macros")
 
-# Add source to this project's executable.
 set(MY_NAMESPACE_BEGIN "namespace my {")
 set(MY_NAMESPACE_END "}")
-add_executable (cmake-project-with-macros "cmake-project-with-macros.cpp" "cmake-project-with-macros.h")
+add_executable (cmake-project-with-macros "cmake-project-with-macros.cpp")
 target_compile_definitions(cmake-project-with-macros PUBLIC
   "MY_NAMESPACE_BEGIN=${MY_NAMESPACE_BEGIN}"
   "MY_NAMESPACE_END=${MY_NAMESPACE_END}"
@@ -23,5 +13,3 @@ target_compile_definitions(cmake-project-with-macros PUBLIC
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET cmake-project-with-macros PROPERTY CXX_STANDARD 20)
 endif()
-
-# TODO: Add tests and install targets if needed.
